# SchemaAnalyzer

./: .replit  Pasted--success-True-recommendations-Structured-Recommendations-for-Schema-org-Organization-Ty-1731741274164.txt  Pasted-I-do-not-find-the-string-validator-schema-org-in-your-code-I-do-see-this-silly-code-required--1732639050673.txt  Pasted-Schema-Analysis-Tool-Requirements-Core-Functionality-Accept-a-single-URL-and-keyword-as-input-E-1731713257956.txt  Pasted-Schema-Organization-type-Organization-key-context-https-schema-org-id--1731942273667.txt  Pasted-WARNING-competitor-analyzer-Request-failed-with-status-None-retrying-in-1-0-seconds-WARNING-compet-1732644633318.txt  competitor_analyzer.py  gpt_schema_analyzer.py  main.py  pyproject.toml  schema_analyzer.py  schema_validator.py  supported_schema.csv  utils.py
.streamlit/: config.toml
assets/: styles.css
validators/: __init__.py  base_validator.py  competitor_validator.py  json_validator.py  schema_org_validator.py
