[project]
name = "repl-nix-schemaanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "openai>=1.54.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dateutil",
    "requests>=2.32.3",
    "streamlit>=1.40.1",
]
